# SimpleCSVParser

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/SimpleCSVParser/: __init__.py
tests/: parser.py
